--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,6 @@
 <html>
 
   <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125957901-1"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-125957901-1');
-  </script>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +10,7 @@
   <meta name="description" content="{{ site.title }}">
   <title>{{ site.btitle }}</title>
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="canonical" href="http://hpnl.ir/">
+  <link rel="canonical" href="http://hpnl.ir">
   <link rel="alternate" type="application/rss+xml" title="{{ site.ltitle }}" href="https://hpnl.ir" />
   <link rel='stylesheet' id='open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.2.4' type='text/css' media='all' />
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:600italic,600,400,400italic' rel='stylesheet' type='text/css'>
@@ -53,7 +45,7 @@
 
     <div class="trigger"><h1>Main Navigation</h1>
 
- <ul class="menu">
+<ul class="menu">
     <li><a class="page-link" href="/"><i class="fa fa-home fa-lg"></i>Home</a></li>
     <li><a class="page-link" href="/lectures/"><i class="fas fa-book-reader"></i> Lectures</a></li>
     <li><a class="page-link" href="/assignments/"><i class="fa fa-book-open"></i> Assignments</a></li>
